@@ -1,27 +1,3 @@
-/**
- *  '$RCSfile$'
- *  Copyright: 2010 Regents of the University of California and the
- *             National Center for Ecological Analysis and Synthesis
- *
- *   '$Author: jones $'
- *     '$Date: 2010-02-03 17:58:12 -0900 (Wed, 03 Feb 2010) $'
- * '$Revision: 5211 $'
- *
- * This program is free software; you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- */
-
 package edu.ucsb.nceas.metacat;
 
 import java.io.File;
@@ -33,16 +9,12 @@ import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashMap;
-import java.util.Hashtable;
 import java.util.List;
 import java.util.Vector;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.dataone.client.v2.formats.ObjectFormatCache;
 import org.dataone.configuration.Settings;
-import org.dataone.service.exceptions.BaseException;
-import org.dataone.service.exceptions.InvalidSystemMetadata;
 import org.dataone.service.types.v1.AccessPolicy;
 import org.dataone.service.types.v1.AccessRule;
 import org.dataone.service.types.v1.Checksum;
@@ -83,12 +55,13 @@ import edu.ucsb.nceas.utilities.access.XMLAccessDAO;
  * @author Matthew Jones
  */
 public class IdentifierManager {
-    
+
     public static final String TYPE_SYSTEM_METADATA = "systemmetadata";
     public static final String TYPE_IDENTIFIER = "identifier";
     
-    private static boolean filterWhiteSpaces = Settings.getConfiguration().getBoolean("dataone.listingidentifier.filteringwhitespaces", true);
-  
+    private static boolean filterWhiteSpaces =
+            Settings.getConfiguration().getBoolean("dataone.listingidentifier.filteringwhitespaces", true);
+
     /**
      * The single instance of the manager that is always returned.
      */
@@ -114,138 +87,8 @@ public class IdentifierManager {
         }
         return self;
     }
-    
-    /*public SystemMetadata asSystemMetadata(Date dateUploaded, String rightsHolder,
-            String checksum, String checksumAlgorithm, String originMemberNode,
-            String authoritativeMemberNode, Date dateModified, String submitter, 
-            String guid, String fmtidStr, BigInteger size, BigInteger serialVersion) {
-        SystemMetadata sysMeta = new SystemMetadata();
 
-        Identifier sysMetaId = new Identifier();
-        sysMetaId.setValue(guid);
-        sysMeta.setIdentifier(sysMetaId);
-        sysMeta.setDateUploaded(dateUploaded);
-        Subject rightsHolderSubject = new Subject();
-        rightsHolderSubject.setValue(rightsHolder);
-        sysMeta.setRightsHolder(rightsHolderSubject);
-        Checksum checksumObject = new Checksum();
-        checksumObject.setValue(checksum);
-        checksumObject.setAlgorithm(checksumAlgorithm);
-        sysMeta.setChecksum(checksumObject);
-        NodeReference omn = new NodeReference();
-        omn.setValue(originMemberNode);
-        sysMeta.setOriginMemberNode(omn);
-        NodeReference amn = new NodeReference();
-        amn.setValue(authoritativeMemberNode);
-        sysMeta.setAuthoritativeMemberNode(amn);
-        sysMeta.setDateSysMetadataModified(dateModified);
-        Subject submitterSubject = new Subject();
-        submitterSubject.setValue(submitter);
-        sysMeta.setSubmitter(submitterSubject);
-        ObjectFormatIdentifier fmtid = null;
-        try {
-        	ObjectFormatIdentifier formatId = new ObjectFormatIdentifier();
-        	formatId.setValue(fmtidStr);
-        	fmtid = ObjectFormatCache.getInstance().getFormat(formatId).getFormatId();
-        	sysMeta.setFormatId(fmtid);
-        	
-        } catch (BaseException nfe) {
-            logMetacat.error("The objectFormat " + fmtidStr +
-          	" is not registered. Setting the default format id.");
-            fmtid = new ObjectFormatIdentifier();
-            fmtid.setValue("application/octet-stream");
-            sysMeta.setFormatId(fmtid);
-            
-        }
-        sysMeta.setSize(size);
-        sysMeta.setSerialVersion(serialVersion);
-        
-        return sysMeta;
-    }*/
-    
-    /**
-     * return a hash of all of the info that is in the systemmetadata table
-     * @param localId
-     * @return
-     */
-    /*public Hashtable<String, String> getSystemMetadataInfo(String localId)
-    throws McdbDocNotFoundException
-    {
-        try
-        {
-            AccessionNumber acc = new AccessionNumber(localId, "NONE");
-            localId = acc.getDocid();
-        }
-        catch(Exception e)
-        {
-            //do nothing. just try the localId as it is
-        }
-        Hashtable<String, String> h = new Hashtable<String, String>();
-        String sql = "select guid, date_uploaded, rights_holder, checksum, checksum_algorithm, " +
-          "origin_member_node, authoritive_member_node, date_modified, submitter, object_format, size " +
-          "from systemmetadata where docid = ?";
-        DBConnection dbConn = null;
-        int serialNumber = -1;
-        try 
-        {
-            // Get a database connection from the pool
-            dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getDocumentInfo");
-            serialNumber = dbConn.getCheckOutSerialNumber();
 
-            // Execute the insert statement
-            PreparedStatement stmt = dbConn.prepareStatement(sql);
-            stmt.setString(1, localId);
-            ResultSet rs = stmt.executeQuery();
-            if (rs.next()) 
-            {
-                String guid = rs.getString(1);
-                Timestamp dateUploaded = rs.getTimestamp(2);
-                String rightsHolder = rs.getString(3);
-                String checksum = rs.getString(4);
-                String checksumAlgorithm = rs.getString(5);
-                String originMemberNode = rs.getString(6);
-                String authoritativeMemberNode = rs.getString(7);
-                Timestamp dateModified = rs.getTimestamp(8);
-                String submitter = rs.getString(9);
-                String objectFormat = rs.getString(10);
-                long size = new Long(rs.getString(11)).longValue();
-                
-                h.put("guid", guid);
-                h.put("date_uploaded", new Long(dateUploaded.getTime()).toString());
-                h.put("rights_holder", rightsHolder);
-                h.put("checksum", checksum);
-                h.put("checksum_algorithm", checksumAlgorithm);
-                h.put("origin_member_node", originMemberNode);
-                h.put("authoritative_member_node", authoritativeMemberNode);
-                h.put("date_modified", new Long(dateModified.getTime()).toString());
-                h.put("submitter", submitter);
-                h.put("object_format", objectFormat);
-                h.put("size", new Long(size).toString());
-                
-                stmt.close();
-            } 
-            else
-            {
-                stmt.close();
-                DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-                throw new McdbDocNotFoundException("2Could not find document " + localId);
-            }
-            
-        } 
-        catch (SQLException e) 
-        {
-            e.printStackTrace();
-            logMetacat.error("Error while getting system metadata info for localid " + localId + " : "  
-                    + e.getMessage());
-        } 
-        finally 
-        {
-            // Return database connection to the pool
-            DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-        }
-        return h;
-    }*/
-    
     /**
      * return a hash of all of the info that is in the systemmetadata table
      * @param guid
@@ -253,9 +96,9 @@ public class IdentifierManager {
      * @throws McdbDocNotFoundException 
      */
     public SystemMetadata getSystemMetadata(String guid)
-    	throws McdbDocNotFoundException
+        throws McdbDocNotFoundException
     {
-        
+
         SystemMetadata sysMeta = new SystemMetadata();
         String sql = "select guid, date_uploaded, rights_holder, checksum, checksum_algorithm, " +
           "origin_member_node, authoritive_member_node, date_modified, submitter, object_format, size, " +
@@ -263,10 +106,10 @@ public class IdentifierManager {
           "from systemmetadata where guid = ?";
         DBConnection dbConn = null;
         int serialNumber = -1;
-        Boolean replicationAllowed = new Boolean(false);
+        Boolean replicationAllowed = Boolean.valueOf(false);
         BigInteger numberOfReplicas = new BigInteger("-1");
         BigInteger serialVersion = new BigInteger("-1");
-        Boolean archived = new Boolean(false);
+        Boolean archived = Boolean.valueOf(false);
 
         try 
         {
@@ -290,12 +133,12 @@ public class IdentifierManager {
                 String submitter = rs.getString(9);
                 String fmtidStr = rs.getString(10);
                 BigInteger size = new BigInteger(rs.getString(11));
-                replicationAllowed = new Boolean(rs.getBoolean(12));
+                replicationAllowed = Boolean.valueOf(rs.getBoolean(12));
                 numberOfReplicas = new BigInteger(rs.getString(13));
                 String obsoletes = rs.getString(14);
                 String obsoletedBy = rs.getString(15);
                 serialVersion = new BigInteger(rs.getString(16));
-                archived = new Boolean(rs.getBoolean(17));
+                archived = Boolean.valueOf(rs.getBoolean(17));
                 String series_id = rs.getString(18);
                 String file_name = rs.getString(19);
                 String media_type = rs.getString(20);
@@ -313,34 +156,34 @@ public class IdentifierManager {
                 checksumObject.setAlgorithm(checksumAlgorithm);
                 sysMeta.setChecksum(checksumObject);
                 if (originMemberNode != null) {
-	                NodeReference omn = new NodeReference();
-	                omn.setValue(originMemberNode);
-	                sysMeta.setOriginMemberNode(omn);
+                    NodeReference omn = new NodeReference();
+                    omn.setValue(originMemberNode);
+                    sysMeta.setOriginMemberNode(omn);
                 }
                 if (authoritativeMemberNode != null) {
-	                NodeReference amn = new NodeReference();
-	                amn.setValue(authoritativeMemberNode);
-	                sysMeta.setAuthoritativeMemberNode(amn);
+                    NodeReference amn = new NodeReference();
+                    amn.setValue(authoritativeMemberNode);
+                    sysMeta.setAuthoritativeMemberNode(amn);
                 }
                 sysMeta.setDateSysMetadataModified(dateModified);
                 if (submitter != null) {
-	                Subject submitterSubject = new Subject();
-	                submitterSubject.setValue(submitter);
-	                sysMeta.setSubmitter(submitterSubject);
+                    Subject submitterSubject = new Subject();
+                    submitterSubject.setValue(submitter);
+                    sysMeta.setSubmitter(submitterSubject);
                 }
                 ObjectFormatIdentifier fmtid = new ObjectFormatIdentifier();
                 fmtid.setValue(fmtidStr);
-            	sysMeta.setFormatId(fmtid);
+                sysMeta.setFormatId(fmtid);
                 sysMeta.setSize(size);
                 if (obsoletes != null) {
-	                Identifier obsoletesId = new Identifier();
-	                obsoletesId.setValue(obsoletes);
-	                sysMeta.setObsoletes(obsoletesId);
+                    Identifier obsoletesId = new Identifier();
+                    obsoletesId.setValue(obsoletes);
+                    sysMeta.setObsoletes(obsoletesId);
                 }
                 if (obsoletedBy != null) {
-		            Identifier obsoletedById = new Identifier();
-		            obsoletedById.setValue(obsoletedBy);
-		            sysMeta.setObsoletedBy(obsoletedById);
+                    Identifier obsoletedById = new Identifier();
+                    obsoletedById.setValue(obsoletedBy);
+                    sysMeta.setObsoletedBy(obsoletedById);
                 }
                 sysMeta.setArchived(archived);
                 if(series_id != null) {
@@ -351,7 +194,7 @@ public class IdentifierManager {
                 if(file_name != null ) {
                     sysMeta.setFileName(file_name);
                 }
-                
+
                 if(media_type != null ) {
                     MediaType mediaType = new MediaType();
                     mediaType.setName(media_type);
@@ -380,7 +223,7 @@ public class IdentifierManager {
                 DBConnectionPool.returnDBConnection(dbConn, serialNumber);
                 throw new McdbDocNotFoundException("Could not find " + guid);
             }
-            
+
         } 
         catch (SQLException e) 
         {
@@ -398,114 +241,114 @@ public class IdentifierManager {
         ReplicationPolicy replicationPolicy = new ReplicationPolicy();
         if ( numberOfReplicas != null  && numberOfReplicas.intValue() != -1 ) {
             replicationPolicy.setNumberReplicas(numberOfReplicas.intValue());
-            
+
         }
-        
+
         if ( replicationAllowed != null ) {
             replicationPolicy.setReplicationAllowed(replicationAllowed);
-            
+
         }
         replicationPolicy.setBlockedMemberNodeList(getReplicationPolicy(guid, "blocked"));
         replicationPolicy.setPreferredMemberNodeList(getReplicationPolicy(guid, "preferred"));
-		    sysMeta.setReplicationPolicy(replicationPolicy);
-		
-		    // look up replication status
-		    sysMeta.setReplicaList(getReplicationStatus(guid));
-		
-		    // look up access policy
-		    try {
-		    	sysMeta.setAccessPolicy(getAccessPolicy(guid));
-		    } catch (AccessException e) {
-		    	throw new McdbDocNotFoundException(e);
-		    }
-        
+            sysMeta.setReplicationPolicy(replicationPolicy);
+
+            // look up replication status
+            sysMeta.setReplicaList(getReplicationStatus(guid));
+
+            // look up access policy
+            try {
+                sysMeta.setAccessPolicy(getAccessPolicy(guid));
+            } catch (AccessException e) {
+                throw new McdbDocNotFoundException(e);
+            }
+
         return sysMeta;
     }
-    
-    
+
+
     private List<NodeReference> getReplicationPolicy(String guid, String policy)
-		throws McdbDocNotFoundException {
-		
-		List<NodeReference> nodes = new ArrayList<NodeReference>();
-		String sql = "select guid, policy, member_node " +
-			"from smReplicationPolicy where guid = ? and policy = ? order by policy_id ASC";
-	    DBConnection dbConn = null;
-	    int serialNumber = -1;
-	    try {
-	        // Get a database connection from the pool
-	        dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getReplicationPolicy");
-	        serialNumber = dbConn.getCheckOutSerialNumber();
-	
-	        // Execute the statement
-	        PreparedStatement stmt = dbConn.prepareStatement(sql);
-	        stmt.setString(1, guid);
-	        stmt.setString(2, policy);
-	        ResultSet rs = stmt.executeQuery();
-	        while (rs.next()) 
-	        {
-	            String memberNode = rs.getString(3);
-	            NodeReference node = new NodeReference();
-	            node.setValue(memberNode);
-	            nodes.add(node);
-	        
-	        } 
-	        stmt.close();
-	        
-	    } catch (SQLException e) {
-	        logMetacat.error("Error while getting system metadata replication policy for guid " + guid, e);
-	    } 
-	    finally {
-	        // Return database connection to the pool
-	        DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-	    }
-	    
-	    return nodes;
-	}
-    
+        throws McdbDocNotFoundException {
+
+        List<NodeReference> nodes = new ArrayList<NodeReference>();
+        String sql = "select guid, policy, member_node " +
+            "from smReplicationPolicy where guid = ? and policy = ? order by policy_id ASC";
+        DBConnection dbConn = null;
+        int serialNumber = -1;
+        try {
+            // Get a database connection from the pool
+            dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getReplicationPolicy");
+            serialNumber = dbConn.getCheckOutSerialNumber();
+
+            // Execute the statement
+            PreparedStatement stmt = dbConn.prepareStatement(sql);
+            stmt.setString(1, guid);
+            stmt.setString(2, policy);
+            ResultSet rs = stmt.executeQuery();
+            while (rs.next())
+            {
+                String memberNode = rs.getString(3);
+                NodeReference node = new NodeReference();
+                node.setValue(memberNode);
+                nodes.add(node);
+
+            }
+            stmt.close();
+
+        } catch (SQLException e) {
+            logMetacat.error("Error while getting system metadata replication policy for guid " + guid, e);
+        }
+        finally {
+            // Return database connection to the pool
+            DBConnectionPool.returnDBConnection(dbConn, serialNumber);
+        }
+
+        return nodes;
+    }
+
     private List<Replica> getReplicationStatus(String guid) throws McdbDocNotFoundException {
-		
-		List<Replica> replicas = new ArrayList<Replica>();
-		String sql = "select guid, member_node, status, date_verified " +
-			"from smReplicationStatus where guid = ?";
-	    DBConnection dbConn = null;
-	    int serialNumber = -1;
-	    try {
-	        // Get a database connection from the pool
-	        dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getReplicas");
-	        serialNumber = dbConn.getCheckOutSerialNumber();
-	
-	        // Execute the statement
-	        PreparedStatement stmt = dbConn.prepareStatement(sql);
-	        stmt.setString(1, guid);
-	        ResultSet rs = stmt.executeQuery();
-	        while (rs.next()) 
-	        {
-	            String memberNode = rs.getString(2);
-	            String status = rs.getString(3);
-	            java.sql.Timestamp verified = rs.getTimestamp(4);
-	            
-	            Replica replica = new Replica();	            
-	            NodeReference node = new NodeReference();
-	            node.setValue(memberNode);
-	            replica.setReplicaMemberNode(node);
-	            replica.setReplicationStatus(ReplicationStatus.valueOf(status));
-	            replica.setReplicaVerified(new Date(verified.getTime()));
-	            replicas.add(replica);
-	        } 
-	        stmt.close();
-	        
-	    } catch (SQLException e) {
-	        logMetacat.error("Error while getting system metadata replication policy for guid " + guid, e);
-	    } 
-	    finally {
-	        // Return database connection to the pool
-	        DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-	    }
-	    
-	    return replicas;
-	}
-    
-    
+
+        List<Replica> replicas = new ArrayList<Replica>();
+        String sql = "select guid, member_node, status, date_verified " +
+            "from smReplicationStatus where guid = ?";
+        DBConnection dbConn = null;
+        int serialNumber = -1;
+        try {
+            // Get a database connection from the pool
+            dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getReplicas");
+            serialNumber = dbConn.getCheckOutSerialNumber();
+
+            // Execute the statement
+            PreparedStatement stmt = dbConn.prepareStatement(sql);
+            stmt.setString(1, guid);
+            ResultSet rs = stmt.executeQuery();
+            while (rs.next())
+            {
+                String memberNode = rs.getString(2);
+                String status = rs.getString(3);
+                java.sql.Timestamp verified = rs.getTimestamp(4);
+
+                Replica replica = new Replica();
+                NodeReference node = new NodeReference();
+                node.setValue(memberNode);
+                replica.setReplicaMemberNode(node);
+                replica.setReplicationStatus(ReplicationStatus.valueOf(status));
+                replica.setReplicaVerified(new Date(verified.getTime()));
+                replicas.add(replica);
+            }
+            stmt.close();
+
+        } catch (SQLException e) {
+            logMetacat.error("Error while getting system metadata replication policy for guid " + guid, e);
+        }
+        finally {
+            // Return database connection to the pool
+            DBConnectionPool.returnDBConnection(dbConn, serialNumber);
+        }
+
+        return replicas;
+    }
+
+
     /**
      * return the newest rev for a given localId
      * @param localId
@@ -541,19 +384,19 @@ public class IdentifierManager {
             {
                 rev = rs.getInt(1);
                 stmt.close();
-            } 
+            }
             else
             {
                 stmt.close();
                 DBConnectionPool.returnDBConnection(dbConn, serialNumber);
                 throw new McdbDocNotFoundException("While trying to get the latest rev, could not find document " + localId);
             }
-        } 
+        }
         catch (SQLException e) 
         {
             logMetacat.error("Error while looking up the guid: " 
                     + e.getMessage());
-        } 
+        }
         finally 
         {
             // Return database connection to the pool
@@ -561,7 +404,7 @@ public class IdentifierManager {
         }
         return rev;
     }
-    
+
     /**
      * return all local ids in the object store that do not have associated
      * system metadata
@@ -570,23 +413,23 @@ public class IdentifierManager {
     {
         Vector<String> ids = new Vector<String>();
         String sql = "select docid, rev from xml_documents " +
-        		"where docid not in " +
-        		"(select docid from identifier where guid in (select guid from systemmetadata))";
+                "where docid not in " +
+                "(select docid from identifier where guid in (select guid from systemmetadata))";
         if (serverLocation > 0) {
-        	sql = sql + " and server_location = ? ";
+            sql = sql + " and server_location = ? ";
         }
-        
+
         String revisionSql = "select docid, rev from xml_revisions " +
-				"where docid not in " +
-				"(select docid from identifier where guid in (select guid from systemmetadata))";
+                "where docid not in " +
+                "(select docid from identifier where guid in (select guid from systemmetadata))";
         if (serverLocation > 0) {
-        	revisionSql = revisionSql + " and server_location = ? ";
+            revisionSql = revisionSql + " and server_location = ? ";
         }
-        
+
         if (includeRevisions) {
-        	sql = sql + " UNION ALL " + revisionSql;
+            sql = sql + " UNION ALL " + revisionSql;
         }
-        
+
         DBConnection dbConn = null;
         int serialNumber = -1;
         try 
@@ -599,10 +442,10 @@ public class IdentifierManager {
             PreparedStatement stmt = dbConn.prepareStatement(sql);
             // set params based on what we have in the query string
             if (serverLocation > 0) {
-            	stmt.setInt(1, serverLocation);
-            	if (includeRevisions) {
-            		stmt.setInt(2, serverLocation);
-            	}
+                stmt.setInt(1, serverLocation);
+                if (includeRevisions) {
+                    stmt.setInt(2, serverLocation);
+                }
             }
             ResultSet rs = stmt.executeQuery();
             while (rs.next()) 
@@ -615,20 +458,20 @@ public class IdentifierManager {
             } 
             stmt.close();
         } 
-        catch (SQLException e) 
+        catch (SQLException e)
         {
-            logMetacat.error("Error while looking up the guid: " 
+            logMetacat.error("Error while looking up the guid: "
                     + e.getMessage());
-        } 
+        }
         finally 
         {
             // Return database connection to the pool
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
         }
-        
+
         return ids;
     }
-    
+
     /**
      * return a listing of all local ids in the object store
      * @return a list of all local ids in metacat
@@ -669,8 +512,8 @@ public class IdentifierManager {
         }
         return ids;
     }
-    
-    
+
+
     /**
      * return a listing of all guids in the object store
      * @return a list of all GUIDs in metacat
@@ -681,7 +524,7 @@ public class IdentifierManager {
         String sql = "select guid from systemmetadata";
         DBConnection dbConn = null;
         int serialNumber = -1;
-        try 
+        try
         {
             // Get a database connection from the pool
             dbConn = DBConnectionPool.getDBConnection("IdentifierManager.getAllGUIDs");
@@ -694,12 +537,12 @@ public class IdentifierManager {
             {
                 String guid = rs.getString(1);
                 guids.add(guid);
-            } 
+            }
             stmt.close();
-        } 
+        }
         catch (SQLException e) 
         {
-            logMetacat.error("Error while retrieving the guid: " 
+            logMetacat.error("Error while retrieving the guid: "
                     + e.getMessage());
         } 
         finally 
@@ -709,7 +552,7 @@ public class IdentifierManager {
         }
         return guids;
     }
-    
+
     /**
      * Get all pids in the series chain
      * @param sid  the id of the series chain
@@ -732,7 +575,7 @@ public class IdentifierManager {
             while (rs.next()) {
                 String guid = rs.getString(1);
                 guids.add(guid);
-            } 
+            }
             stmt.close();
         } finally {
             // Return database connection to the pool
@@ -740,8 +583,8 @@ public class IdentifierManager {
         }
         return guids;
     }
-    
-    
+
+
     /**
      * returns a list of system metadata-only guids since the given date
      * @return a list of system ids in metacat that do not correspond to objects
@@ -752,10 +595,10 @@ public class IdentifierManager {
     {
         List<String> ids = new Vector<String>();
         String sql = 
-        	"select guid from " + TYPE_SYSTEM_METADATA +
-        	" where guid not in " +
-        	" (select guid from " + TYPE_IDENTIFIER + ") " +
-        	" and date_modified > ?";
+            "select guid from " + TYPE_SYSTEM_METADATA +
+            " where guid not in " +
+            " (select guid from " + TYPE_IDENTIFIER + ") " +
+            " and date_modified > ?";
         DBConnection dbConn = null;
         int serialNumber = -1;
         try 
@@ -779,15 +622,15 @@ public class IdentifierManager {
         {
             logMetacat.error("Error while looking up the updated guids: " 
                     + e.getMessage());
-        } 
-        finally 
+        }
+        finally
         {
             // Return database connection to the pool
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
         }
         return ids;
     }
-    
+
     /**
      * returns a list of system metadata-only guids since the given date
      * @return a list of system ids in metacat that do not correspond to objects
@@ -798,7 +641,7 @@ public class IdentifierManager {
 
         List<String> ids = new Vector<String>();
         String sql = 
-        	"select max(date_modified) from " + TYPE_SYSTEM_METADATA;
+            "select max(date_modified) from " + TYPE_SYSTEM_METADATA;
         DBConnection dbConn = null;
         int serialNumber = -1;
         try 
@@ -811,16 +654,16 @@ public class IdentifierManager {
             PreparedStatement stmt = dbConn.prepareStatement(sql);
             ResultSet rs = stmt.executeQuery();
             if (rs.next()) {
-            	maxDate = rs.getDate(1);
+                maxDate = rs.getDate(1);
             } 
             stmt.close();
-        } 
-        catch (SQLException e) 
+        }
+        catch (SQLException e)
         {
-            logMetacat.error("Error while looking up the latest update date: " 
+            logMetacat.error("Error while looking up the latest update date: "
                     + e.getMessage());
         } 
-        finally 
+        finally
         {
             // Return database connection to the pool
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
@@ -846,19 +689,19 @@ public class IdentifierManager {
                 idExists = true;
             }
         } catch (McdbDocNotFoundException e) {
-        	// try system metadata only
-        	    //this will check if the guid field on the system metadata table has the id
-        		idExists = systemMetadataPIDExists(guid);
-        		if(!idExists) {
-        		    //if the guid field of the system metadata table doesn't have the id,
-        		    //we will check if the serial_id field of the system metadata table has it
-        		    idExists=systemMetadataSIDExists(guid);
-        		}
+            // try system metadata only
+                //this will check if the guid field on the system metadata table has the id
+                idExists = systemMetadataPIDExists(guid);
+                if(!idExists) {
+                    //if the guid field of the system metadata table doesn't have the id,
+                    //we will check if the serial_id field of the system metadata table has it
+                    idExists=systemMetadataSIDExists(guid);
+                }
             
         }
         return idExists;
     }
-    
+
     /**
      * Determine if an identifier mapping exists already, 
      * returning true if so.
@@ -875,11 +718,11 @@ public class IdentifierManager {
                 idExists = true;
             }
         } catch (McdbDocNotFoundException e) {
-        	// nope!
+            // nope!
         }
         return idExists;
     }
-    
+
     /**
      * 
      * @param guid
@@ -945,7 +788,7 @@ public class IdentifierManager {
         
         return localId;
     }
-    
+
     /**
      * given a local identifer, look up the guid.  Throw McdbDocNotFoundException
      * if the docid, rev is not found in the identifiers or systemmetadata tables
@@ -961,7 +804,7 @@ public class IdentifierManager {
         logMetacat.debug("getting guid for " + docid);
         String query = "select guid from identifier where docid = ? and rev = ?";
         String guid = null;
-        
+
         DBConnection dbConn = null;
         int serialNumber = -1;
         PreparedStatement stmt = null;
@@ -975,13 +818,13 @@ public class IdentifierManager {
             stmt.setString(1, docid);
             stmt.setInt(2, rev);
             ResultSet rs = stmt.executeQuery();
-            if (rs.next()) 
+            if (rs.next())
             {
                 guid = rs.getString(1);
-            } 
+            }
             else
             {
-            	throw new McdbDocNotFoundException("No guid registered for docid " + docid + "." + rev);
+                throw new McdbDocNotFoundException("No guid registered for docid " + docid + "." + rev);
             }
             if(rs != null) {
                 rs.close();
@@ -1000,14 +843,15 @@ public class IdentifierManager {
                 // Return database connection to the pool
                 DBConnectionPool.returnDBConnection(dbConn, serialNumber);
             }
-            
+
         }
-        
+
         return guid;
     }
-    
+
     /**
-     * Get the list of identifiers which system metadata matches the given format id and original member node id and guid or series id start with the scheme (doi for example).
+     * Get the list of identifiers which system metadata matches the given format id and original
+     * member node id and guid or series id start with the scheme (doi for example).
      * @param formatId  the format id of the identifier must match the given formatId. 
      * @param nodeId  the original member node of the identifier must match the given nodeId. 
      * @param scheme  the guid or series id must start with the given scheme (doi for exampe)
@@ -1040,7 +884,7 @@ public class IdentifierManager {
                 rs.close();
             }
         } catch (SQLException e) {
-            logMetacat.error("Error while looking up the guid: " 
+            logMetacat.error("Error while looking up the guid: "
                     + e.getMessage());
         } finally {
             try {
@@ -1052,19 +896,21 @@ public class IdentifierManager {
             } finally {
                 // Return database connection to the pool
                 DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-            }   
+            }
         }
         return guids;
     }
-    
+
     /**
      * Get the pid of the head (current) version of objects match the specified sid.
      * 1. locate all candidate chain-ends for S1:
-     *      determined by:  seriesId == S1 AND (obsoletedBy == null  OR obsoletedBy.seriesId != S1) // these are the type1 and type2 ends
+     *      determined by:  seriesId == S1 AND (obsoletedBy == null  OR obsoletedBy.seriesId != S1)
+     *      these are the type1 and type2 ends
      *      If obsoletedBy is missing, we generally consider it a type 2 end except:
-     *      there is another object in the chain (has the same series id) that obsoletes the missing object. 
+     *      there is another object in the chain (has the same series id) that obsoletes the missing object.
      * 2. if only 1 candidate chain-end, return it as the HEAD
-     * 3. otherwise return the one in the chain with the latest dateUploaded value. However, we find that dateUpload doesn't refect the obsoletes information
+     * 3. otherwise return the one in the chain with the latest dateUploaded value. However, we find
+     * that dateUpload doesn't refect the obsoletes information
      * (espically on the cn), so we will check osoletes information as well. https://redmine.dataone.org/issues/7624
      * @param sid specified sid which should match.
      * @return the pid of the head version. The null will be returned if there is no pid found.
@@ -1081,9 +927,10 @@ public class IdentifierManager {
             PreparedStatement stmt2 = null;
             ResultSet rs = null;
             ResultSet result = null;
-            //int endsCount = 0;
+
             boolean hasError = false;
-            HashMap<String, String> obsoletesIdGuidMap = new HashMap<String, String>();//the key is an obsoletes id, the value is an guid
+            //the key is an obsoletes id, the value is an guid
+            HashMap<String, String> obsoletesIdGuidMap = new HashMap<String, String>();
             Vector<Identifier> endsList = new Vector<Identifier>();//the vector storing ends
             try {
                 // Get a database connection from the pool
@@ -1178,13 +1025,18 @@ public class IdentifierManager {
                                     break;
                                 }*/
                                 if(obsoletesIdGuidMap != null && obsoletesIdGuidMap.containsKey(obsoletedByStr)) {
-                                   //This is the exception - another object in the chain (has the same series id) that obsoletes the missing object
+                                   //This is the exception - another object in the chain (has the same series id)
+                                    //that obsoletes the missing object
                                     //The obsoletesIdGuidMap maintains the relationship (with the same  series id)
-                                    logMetacat.debug("Though the object "+obsoletedBy+" which obsoletes "+guidStr+" is missing."+
-                                            " However, there is another object "+obsoletesIdGuidMap.get(obsoletedByStr)+" in the chain obsoleting it. So it is not an end.");
+                                    logMetacat.debug("Though the object " + obsoletedBy
+                                               + " which obsoletes " + guidStr + " is missing."
+                                               + " However, there is another object "
+                                               + obsoletesIdGuidMap.get(obsoletedByStr)
+                                               + " in the chain obsoleting it. So it is not an end.");
                                   
                                 } else {
-                                    //the exception (another object in the chain (has the same series id) that obsoletes the missing object) doesn't exist
+                                    //the exception (another object in the chain (has the same series id)
+                                    //that obsoletes the missing object) doesn't exist
                                     // it is a type 2 end
                                     logMetacat.debug(""+guidStr+" is a type 2 end for sid "+sid.getValue());
                                     //pid = guid;
@@ -1196,7 +1048,8 @@ public class IdentifierManager {
                         hasNext = rs.next();
                     }
                     if(hasError) {
-                        logMetacat.info("The sid chain "+sid.getValue()+" was messed up and we will return the object with the latest upload date.");
+                        logMetacat.info("The sid chain " + sid.getValue()
+                        + " was messed up and we will return the object with the latest upload date.");
                         pid = firstOne;
                     } else {
                         if(endsList.size() == 1) {
@@ -1207,19 +1060,20 @@ public class IdentifierManager {
                             logMetacat.info("This is weird situation and we don't find any end. We use the latest DateOfupload");
                             pid=checkObsoletesChain(firstOne, obsoletesIdGuidMap);
                         } else if(endsList.size() >1) {
-                            // it is not an ideal chain, use the one with latest upload date(the first one in the result set since we have the desc order)
+                            // it is not an ideal chain, use the one with latest upload date
+                            //(the first one in the result set since we have the desc order)
                             logMetacat.info("It is NOT an ideal chain for sid "+sid.getValue());
                             pid = checkObsoletesChain(endsList.get(0), obsoletesIdGuidMap);
                         }
                     }
-                    
+
                 } else {
                     //it is not a sid or at least we don't have anything to match it.
                     //do nothing, so null will be returned
                     logMetacat.info("We don't find anything matching the id "+sid.getValue()+" as sid. The null will be returned since it is probably a pid");
                 }
-                
-                
+
+
             } catch (SQLException e) {
                 logMetacat.error("Error while get the head pid for the sid "+sid.getValue()+" : " 
                         + e.getMessage());
@@ -1251,10 +1105,10 @@ public class IdentifierManager {
         } else if(pid == null && sid != null) {
             logMetacat.info("The head of chain for sid "+sid.getValue()+" is null. So it is pid.");
         }
-        
+
         return pid;
     }
-    
+
     /*
      * For the non-ideal chain, we used to return the latest Dateupload object as the head pid. However, Dateupload
      * sometimes doesn't refect the obsoletes chain. We need to check if any other objects obsoletes it recursively.
@@ -1272,7 +1126,7 @@ public class IdentifierManager {
             }
             pid = new Identifier();
             pid.setValue(pidStr);
-            
+
         }
         if(pid != null && latestDateUpload != null){
             logMetacat.debug("IdnetifierManager.checkObsoletesChain - The final return value is "+pid.getValue()+ " for given value "+latestDateUpload.getValue());
@@ -1292,7 +1146,7 @@ public class IdentifierManager {
             return false;
         }
     }
-    
+
     /**
      * Check if the specified sid exists on the serial id field on the system metadata table
      * @param id
@@ -1340,7 +1194,7 @@ public class IdentifierManager {
         }
         return exists;
     }
-    
+
     /**
      * Determine if the specified identifier object exists or not.
      * @param pid - the specified identifier
@@ -1355,54 +1209,54 @@ public class IdentifierManager {
             return false;
         }
     }
-    
+
     public boolean systemMetadataPIDExists(String guid) throws SQLException {
-		logMetacat.debug("looking up system metadata for guid " + guid);
-		boolean exists = false;
-		String query = "select guid from systemmetadata where guid = ?";
-		DBConnection dbConn = null;
-		int serialNumber = -1;
-		PreparedStatement stmt = null;
-		if(guid != null && !guid.trim().equals("")) {
-		    try {
-	            // Get a database connection from the pool
-	            dbConn = DBConnectionPool.getDBConnection("IdentifierManager.systemMetadataExisits");
-	            serialNumber = dbConn.getCheckOutSerialNumber();
+        logMetacat.debug("looking up system metadata for guid " + guid);
+        boolean exists = false;
+        String query = "select guid from systemmetadata where guid = ?";
+        DBConnection dbConn = null;
+        int serialNumber = -1;
+        PreparedStatement stmt = null;
+        if(guid != null && !guid.trim().equals("")) {
+            try {
+                // Get a database connection from the pool
+                dbConn = DBConnectionPool.getDBConnection("IdentifierManager.systemMetadataExisits");
+                serialNumber = dbConn.getCheckOutSerialNumber();
 
-	            // Execute the insert statement
-	            stmt = dbConn.prepareStatement(query);
-	            stmt.setString(1, guid);
-	            ResultSet rs = stmt.executeQuery();
-	            if (rs.next()) {
-	                exists = true;
-	            }
-	            if(rs != null) {
-	                rs.close();
-	            }
+                // Execute the insert statement
+                stmt = dbConn.prepareStatement(query);
+                stmt.setString(1, guid);
+                ResultSet rs = stmt.executeQuery();
+                if (rs.next()) {
+                    exists = true;
+                }
+                if(rs != null) {
+                    rs.close();
+                }
 
-	        } catch (SQLException e) {
-	            logMetacat.error("Error while looking up the system metadata: "
-	                    + e.getMessage());
-	            throw e;
-	        } finally {
-	            try {
-	                if(stmt != null) {
-	                    stmt.close();
-	                }
-	            } catch (Exception e) {
-	                logMetacat.warn("Couldn't close the prepared statement since "+e.getMessage());
-	            } finally {
-	                // Return database connection to the pool
-	                DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-	            }
-	        }
-		}
-		return exists;
-	}
-    
-    
-        
-    
+            } catch (SQLException e) {
+                logMetacat.error("Error while looking up the system metadata: "
+                        + e.getMessage());
+                throw e;
+            } finally {
+                try {
+                    if(stmt != null) {
+                        stmt.close();
+                    }
+                } catch (Exception e) {
+                    logMetacat.warn("Couldn't close the prepared statement since "+e.getMessage());
+                } finally {
+                    // Return database connection to the pool
+                    DBConnectionPool.returnDBConnection(dbConn, serialNumber);
+                }
+            }
+        }
+        return exists;
+    }
+
+
+
+
     /**
      * update a mapping
      * @param guid
@@ -1410,7 +1264,7 @@ public class IdentifierManager {
      */
     public void updateMapping(String guid, String localId)
     {
-    	
+
         logMetacat.debug("$$$$$$$$$$$$$$ updating mapping table");
         int serialNumber = -1;
         DBConnection dbConn = null;
@@ -1421,7 +1275,7 @@ public class IdentifierManager {
             int rev = 1;
             if(acc.getRev() != null)
             {
-              rev = (new Integer(acc.getRev()).intValue());
+              rev = Integer.parseInt(acc.getRev());
             }
 
             // Get a database connection from the pool
@@ -1456,9 +1310,9 @@ public class IdentifierManager {
         }
         logMetacat.debug("done updating mapping");
     }
-        
 
-    
+
+
     /**
      * Lookup access policy from Metacat
      * @param guid
@@ -1469,53 +1323,53 @@ public class IdentifierManager {
     public AccessPolicy getAccessPolicy(String guid) throws McdbDocNotFoundException, AccessException {
         AccessPolicy accessPolicy = new AccessPolicy();
 
-    	// use GUID to look up the access
+        // use GUID to look up the access
         XMLAccessAccess accessController  = new XMLAccessAccess();
         List<XMLAccessDAO> accessDAOs = accessController.getXMLAccessForDoc(guid);
         
         for (XMLAccessDAO accessDAO: accessDAOs) {
-        	// only add allow rule
-        	if (accessDAO.getPermType().equals(AccessControlInterface.ALLOW)) {
-	        	AccessRule accessRule = new AccessRule();    	
-	        	List <Permission> permissions = convertPermission(accessDAO.getPermission().intValue());
-	        	// cannot include if we have no permissions
-	        	if (permissions == null || permissions.isEmpty()) {
-	        		logMetacat.warn("skipping empty access rule permissions for " + guid);
-	        		continue;
-	        	}
-	        	accessRule.setPermissionList(permissions);
-	        	Subject subject = new Subject();
-	        	subject.setValue(accessDAO.getPrincipalName());
-	        	accessRule.addSubject(subject);
-	            accessPolicy.addAllow(accessRule);
-        	}
+            // only add allow rule
+            if (accessDAO.getPermType().equals(AccessControlInterface.ALLOW)) {
+                AccessRule accessRule = new AccessRule();
+                List <Permission> permissions = convertPermission(accessDAO.getPermission().intValue());
+                // cannot include if we have no permissions
+                if (permissions == null || permissions.isEmpty()) {
+                    logMetacat.warn("skipping empty access rule permissions for " + guid);
+                    continue;
+                }
+                accessRule.setPermissionList(permissions);
+                Subject subject = new Subject();
+                subject.setValue(accessDAO.getPrincipalName());
+                accessRule.addSubject(subject);
+                accessPolicy.addAllow(accessRule);
+            }
         }
         return accessPolicy;
     }
-    
+
     public List<Permission> convertPermission(int permission) {
-    	
-    	List<Permission> permissions = new ArrayList<Permission>();
-    	if (permission == AccessControlInterface.ALL) {
-    		permissions.add(Permission.READ);
-    		permissions.add(Permission.WRITE);
-    		permissions.add(Permission.CHANGE_PERMISSION);
-    		return permissions;
-    	}
-    	
-    	if ((permission & AccessControlInterface.CHMOD) == AccessControlInterface.CHMOD) {
-    		permissions.add(Permission.CHANGE_PERMISSION);
-    	}
-    	if ((permission & AccessControlInterface.READ) == AccessControlInterface.READ) {
-    		permissions.add(Permission.READ);
-    	}
-    	if ((permission & AccessControlInterface.WRITE) == AccessControlInterface.WRITE) {
-    		permissions.add(Permission.WRITE);
-    	}
-    	
-		return permissions;
+
+        List<Permission> permissions = new ArrayList<Permission>();
+        if (permission == AccessControlInterface.ALL) {
+            permissions.add(Permission.READ);
+            permissions.add(Permission.WRITE);
+            permissions.add(Permission.CHANGE_PERMISSION);
+            return permissions;
+        }
+
+        if ((permission & AccessControlInterface.CHMOD) == AccessControlInterface.CHMOD) {
+            permissions.add(Permission.CHANGE_PERMISSION);
+        }
+        if ((permission & AccessControlInterface.READ) == AccessControlInterface.READ) {
+            permissions.add(Permission.READ);
+        }
+        if ((permission & AccessControlInterface.WRITE) == AccessControlInterface.WRITE) {
+            permissions.add(Permission.WRITE);
+        }
+
+        return permissions;
     }
-    
+
     /**
      * Lookup a localId given the GUID. If
      * the identifier is not found, throw an exception.
@@ -1525,20 +1379,20 @@ public class IdentifierManager {
      * @throws McdbDocNotFoundException if the identifier is not found
      */
     public String getLocalId(String guid) throws McdbDocNotFoundException, SQLException {
-      
+
       String db_guid = "";
       String docid = "";
       int rev = 0;
-      
+
       String query = "select guid, docid, rev from " + TYPE_IDENTIFIER + " where guid = ?";
-      
+
       DBConnection dbConn = null;
       int serialNumber = -1;
       try {
           // Get a database connection from the pool
           dbConn = DBConnectionPool.getDBConnection("Identifier.getLocalId");
           serialNumber = dbConn.getCheckOutSerialNumber();
-          
+
           // Execute the insert statement
           PreparedStatement stmt = dbConn.prepareStatement(query);
           stmt.setString(1, guid);
@@ -1562,7 +1416,7 @@ public class IdentifierManager {
       }
       return docid + "." + rev;
     }
-    
+
     /**
      * query the systemmetadata table based on the given parameters
      * @param startTime
@@ -1572,9 +1426,9 @@ public class IdentifierManager {
      * @param start
      * @param count
      * @return ObjectList
-     * @throws SQLException 
-     * @throws ServiceException 
-     * @throws PropertyNotFoundException 
+     * @throws SQLException
+     * @throws ServiceException
+     * @throws PropertyNotFoundException
      */
     public ObjectList querySystemMetadata(Date startTime, Date endTime,
         ObjectFormatIdentifier objectFormatId, NodeReference nodeId,
@@ -1592,13 +1446,13 @@ public class IdentifierManager {
             String fieldSql = "select guid, date_uploaded, rights_holder, checksum, "
                     + "checksum_algorithm, origin_member_node, authoritive_member_node, "
                     + "date_modified, submitter, object_format, size from systemmetadata";
-            
+
             // handle special case quickly
             String countSql = "select count(guid) from systemmetadata";
             
             // the clause
             String whereClauseSql = "";
-            
+
 
             boolean f1 = false;
             boolean f2 = false;
@@ -1648,17 +1502,7 @@ public class IdentifierManager {
                 f4 = true;
             }
 
-            /*if (!replicaStatus) {
-                String currentNodeId = PropertyService.getInstance().getProperty("dataone.nodeId");
-                if (!f1 && !f2 && !f3 && !f4) {
-                    whereClauseSql += " where authoritive_member_node = '" +
-                        currentNodeId.trim() + "'";
-                } else {
-                    whereClauseSql += " and authoritive_member_node = '" +
-                        currentNodeId.trim() + "'";
-                }
-            }*/
-            
+
             if (nodeId != null && nodeId.getValue() != null && !nodeId.getValue().trim().equals("")) {
                 if (!f1 && !f2 && !f3 && !f4) {
                     whereClauseSql += " where authoritive_member_node = '" +
@@ -1669,20 +1513,24 @@ public class IdentifierManager {
                 }
                 f5 = true;
             }
-            
+
           //add a filter to remove pids whith white spaces
             if(filterWhiteSpaces) {
-                logMetacat.debug("IdnetifierManager.querySystemMetadata - the default value of the property \"dataone.listingidentifier.filteringwhitespaces\" is true, so we will filter the white spaces in the query");
+                logMetacat.debug("IdnetifierManager.querySystemMetadata - the default value of the "
+                                  + "property \"dataone.listingidentifier.filteringwhitespaces\" is "
+                                  + "true, so we will filter the white spaces in the query");
                 if(!f1 && !f2 && !f3 && !f4 && !f5) {
                     whereClauseSql += " where guid not like '% %' ";
                 } else {
                     whereClauseSql += " and guid not like '% %' ";
                 }
             } else {
-                logMetacat.debug("IdnetifierManager.querySystemMetadata - the property \"dataone.listingidentifier.filteringwhitespaces\" is configured to be false, so we don't filter the white spaces in the query.");
+                logMetacat.debug("IdnetifierManager.querySystemMetadata - the property "
+                                 + "\"dataone.listingidentifier.filteringwhitespaces\" is "
+                     + "configured to be false, so we don't filter the white spaces in the query.");
             }
-           
-            
+
+
             // connection
             dbConn = DBConnectionPool.getDBConnection("IdentifierManager.querySystemMetadata");
             serialNumber = dbConn.getCheckOutSerialNumber();
@@ -1692,7 +1540,7 @@ public class IdentifierManager {
             String fieldQuery = fieldSql + whereClauseSql + orderBySql;
             String finalQuery = DatabaseService.getInstance().getDBAdapter().getPagedQuery(fieldQuery, start, count);
             fieldStmt = dbConn.prepareStatement(finalQuery);
-            
+
             // construct the count query and statment
             String countQuery = countSql + whereClauseSql;
             countStmt = dbConn.prepareStatement(countQuery);
@@ -1796,84 +1644,84 @@ public class IdentifierManager {
             }
 
             logMetacat.info("list objects fieldStmt: " + fieldStmt.toString());
-            
+
             logMetacat.info("list objects countStmt: " + countStmt.toString());
-            
+
             // get the total object count no matter what
             int total = 0;
             totalResult = countStmt.executeQuery();
             if (totalResult.next()) {
-            	total = totalResult.getInt(1);
+                total = totalResult.getInt(1);
             }
-            
+
             logMetacat.debug("list objects total: " + total);
 
-        	// set the totals
-        	ol.setStart(start);
+            // set the totals
+            ol.setStart(start);
             ol.setCount(count);
-            
+
             // retrieve the actual records if requested
             if (count != 0) {
-            	
-                rs = fieldStmt.executeQuery();
-	            while (rs.next()) {                
-	                
-	                String guid = rs.getString(1);
-	                logMetacat.debug("query found object with guid " + guid);
-	                // Timestamp dateUploaded = rs.getTimestamp(2);
-	                // String rightsHolder = rs.getString(3);
-	                String checksum = rs.getString(4);
-	                String checksumAlgorithm = rs.getString(5);
-	                // String originMemberNode = rs.getString(6);
-	                // String authoritiveMemberNode = rs.getString(7);
-	                Timestamp dateModified = rs.getTimestamp(8);
-	                // String submitter = rs.getString(9);
-	                String fmtidStr = rs.getString(10);
-	                String sz = rs.getString(11);
-	                BigInteger size = new BigInteger("0");
-	
-	                if (sz != null && !sz.trim().equals("")) {
-	                    size = new BigInteger(rs.getString(11));
-	                }
-	
-	                ObjectInfo oi = new ObjectInfo();
-	
-	                Identifier id = new Identifier();
-	                id.setValue(guid);
-	                oi.setIdentifier(id);
-	
-	                if (dateModified != null) {
-	                    oi.setDateSysMetadataModified(dateModified);
-	                }
-	
-	                Checksum cs = new Checksum();
-	                cs.setValue(checksum);
-	                try {
-	                    // cs.setAlgorithm(ChecksumAlgorithm.valueOf(checksumAlgorithm));
-	                    cs.setAlgorithm(checksumAlgorithm);
-	                } catch (Exception e) {
-	                    logMetacat.error("could not parse checksum algorithm", e);
-	                    continue;
-	                }
-	                oi.setChecksum(cs);
-	
-	                // set the format type
-	                ObjectFormatIdentifier fmtid = new ObjectFormatIdentifier();
-	                fmtid.setValue(fmtidStr);
-	                oi.setFormatId(fmtid);
-	
-	                oi.setSize(size);
-	                
-	                ol.addObjectInfo(oi);                    
 
-	            }
-	            
-	            logMetacat.debug("list objects count: " + ol.sizeObjectInfoList());
-	            // set the actual count retrieved
-	            ol.setCount(ol.sizeObjectInfoList());
-	            
-	
-	        }
+                rs = fieldStmt.executeQuery();
+                while (rs.next()) {
+
+                    String guid = rs.getString(1);
+                    logMetacat.debug("query found object with guid " + guid);
+                    // Timestamp dateUploaded = rs.getTimestamp(2);
+                    // String rightsHolder = rs.getString(3);
+                    String checksum = rs.getString(4);
+                    String checksumAlgorithm = rs.getString(5);
+                    // String originMemberNode = rs.getString(6);
+                    // String authoritiveMemberNode = rs.getString(7);
+                    Timestamp dateModified = rs.getTimestamp(8);
+                    // String submitter = rs.getString(9);
+                    String fmtidStr = rs.getString(10);
+                    String sz = rs.getString(11);
+                    BigInteger size = new BigInteger("0");
+
+                    if (sz != null && !sz.trim().equals("")) {
+                        size = new BigInteger(rs.getString(11));
+                    }
+
+                    ObjectInfo oi = new ObjectInfo();
+
+                    Identifier id = new Identifier();
+                    id.setValue(guid);
+                    oi.setIdentifier(id);
+
+                    if (dateModified != null) {
+                        oi.setDateSysMetadataModified(dateModified);
+                    }
+
+                    Checksum cs = new Checksum();
+                    cs.setValue(checksum);
+                    try {
+                        // cs.setAlgorithm(ChecksumAlgorithm.valueOf(checksumAlgorithm));
+                        cs.setAlgorithm(checksumAlgorithm);
+                    } catch (Exception e) {
+                        logMetacat.error("could not parse checksum algorithm", e);
+                        continue;
+                    }
+                    oi.setChecksum(cs);
+
+                    // set the format type
+                    ObjectFormatIdentifier fmtid = new ObjectFormatIdentifier();
+                    fmtid.setValue(fmtidStr);
+                    oi.setFormatId(fmtid);
+
+                    oi.setSize(size);
+
+                    ol.addObjectInfo(oi);
+
+                }
+
+                logMetacat.debug("list objects count: " + ol.sizeObjectInfoList());
+                // set the actual count retrieved
+                ol.setCount(ol.sizeObjectInfoList());
+
+
+            }
             ol.setTotal(total);
         } finally {
             // Return database connection to the pool
@@ -1892,10 +1740,10 @@ public class IdentifierManager {
                 }
                 
             } catch (SQLException sql) {
-                
+
             }
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-            
+
         }
         if(ol != null) {
             logMetacat.debug("list objects start(before returning): " + ol.getStart());
@@ -1904,15 +1752,15 @@ public class IdentifierManager {
         }
         return ol;
     }
-    
+
     /**
      * create a mapping in the identifier table
      * @param guid
      * @param localId
      */
     public void createMapping(String guid, String localId)
-    {        
-        
+    {
+
         int serialNumber = -1;
         DBConnection dbConn = null;
         try {
@@ -1922,7 +1770,7 @@ public class IdentifierManager {
             String docid = acc.getDocid();
             int rev = 1;
             if (acc.getRev() != null) {
-              rev = (new Integer(acc.getRev()).intValue());
+              rev = Integer.parseInt(acc.getRev());
             }
 
             // Get a database connection from the pool
@@ -1940,31 +1788,28 @@ public class IdentifierManager {
 
             stmt.close();
         } catch (SQLException e) {
-            e.printStackTrace();
-            logMetacat.error("createGenericMapping: SQL error while creating a mapping to the " + TYPE_IDENTIFIER + " identifier: " 
-                    + e.getMessage());
+            logMetacat.error("createGenericMapping: SQL error while creating a mapping to the "
+                            + TYPE_IDENTIFIER + " identifier: " + e.getMessage());
         } catch (NumberFormatException e) {
-            e.printStackTrace();
-            logMetacat.error("createGenericMapping: NumberFormat error while creating a mapping to the " + TYPE_IDENTIFIER + " identifier: " 
-                    + e.getMessage());
+            logMetacat.error("createGenericMapping: NumberFormat error while creating a mapping to the "
+                           + TYPE_IDENTIFIER + " identifier: " + e.getMessage());
         } catch (AccessionNumberException e) {
-            e.printStackTrace();
-            logMetacat.error("createGenericMapping: AccessionNumber error while creating a mapping to the " + TYPE_IDENTIFIER + " identifier: " 
-                    + e.getMessage());
+            logMetacat.error("createGenericMapping: AccessionNumber error while creating a mapping to the "
+                           + TYPE_IDENTIFIER + " identifier: " + e.getMessage());
         } finally {
             // Return database connection to the pool
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
         }
     }
-    
+
     /**
      * remove a mapping in the identifier table
      * @param guid
      * @param localId
      */
     public void removeMapping(String guid, String localId)
-    {        
-        
+    {
+
         int serialNumber = -1;
         DBConnection dbConn = null;
         try {
@@ -1974,7 +1819,7 @@ public class IdentifierManager {
             String docid = acc.getDocid();
             int rev = 1;
             if (acc.getRev() != null) {
-              rev = (new Integer(acc.getRev()).intValue());
+              rev = Integer.parseInt(acc.getRev());
             }
 
             // Get a database connection from the pool
@@ -2008,88 +1853,11 @@ public class IdentifierManager {
             DBConnectionPool.returnDBConnection(dbConn, serialNumber);
         }
     }
-    
-   
-    
-    public boolean deleteSystemMetadata(String guid)
-    {        
-        boolean success = false;
-        int serialNumber = -1;
-        DBConnection dbConn = null;
-        String query = null;
-        PreparedStatement stmt = null;
-        int rows = 0;
-        try {
 
-        	 // Get a database connection from the pool
-            dbConn = DBConnectionPool.getDBConnection("IdentifierManager.deleteSystemMetadata");
-            serialNumber = dbConn.getCheckOutSerialNumber();
-            dbConn.setAutoCommit(false);
-        	
-            // remove the smReplicationPolicy
-            query = "delete from smReplicationPolicy " + 
-            "where guid = ?";
-            stmt = dbConn.prepareStatement(query);
-            stmt.setString(1, guid);
-            logMetacat.debug("delete smReplicationPolicy: " + stmt.toString());
-            rows = stmt.executeUpdate();
-            stmt.close();
-            
-            // remove the smReplicationStatus
-            query = "delete from smReplicationStatus " + 
-            "where guid = ?";
-            stmt = dbConn.prepareStatement(query);
-            stmt.setString(1, guid);
-            logMetacat.debug("delete smReplicationStatus: " + stmt.toString());
-            rows = stmt.executeUpdate();
-            stmt.close();
-            
-            // remove the smmediatypeproperties
-            query = "delete from smMediaTypeProperties " + 
-                    "where guid = ?";
-            stmt = dbConn.prepareStatement(query);
-            stmt.setString(1, guid);
-            logMetacat.debug("delete smMediaTypeProperties: " + stmt.toString());
-            rows = stmt.executeUpdate();
-            stmt.close();
-            
-            // remove the xml_access
-            query = "delete from xml_access " + 
-                    "where guid = ?";
-            stmt = dbConn.prepareStatement(query);
-            stmt.setString(1, guid);
-            logMetacat.debug("delete xml_access: " + stmt.toString());
-            rows = stmt.executeUpdate();
-            stmt.close();
-            
-            // remove main system metadata entry
-            query = "delete from " + TYPE_SYSTEM_METADATA + " where guid = ? ";
-            stmt = dbConn.prepareStatement(query);
-            stmt.setString(1, guid);
-            logMetacat.debug("delete system metadata: " + stmt.toString());
-            rows = stmt.executeUpdate();
-            stmt.close();
-            
-            dbConn.commit();
-            dbConn.setAutoCommit(true);
-            success = true;
-            // TODO: remove the access?
-            // Metacat keeps "deleted" documents so we should not remove access rules.
-            
-        } catch (Exception e) {
-            logMetacat.error("Error while deleting " + TYPE_SYSTEM_METADATA + " record: " + guid, e );
-            try {
-				dbConn.rollback();
-			} catch (SQLException sqle) {
-	            logMetacat.error("Error while rolling back delete for record: " + guid, sqle );
-			}
-        } finally {
-            // Return database connection to the pool
-            DBConnectionPool.returnDBConnection(dbConn, serialNumber);
-        }
-        return success;
-    }
-    
+
+
+
+
     /**
      * Determine if the object file exist for the given localId.
      * @param localId
@@ -2106,10 +1874,12 @@ public class IdentifierManager {
                 exist = file.exists();
             }
         } 
-        logMetacat.debug("IdentifierManager.ObjectFileExist - Does the object file for the local id "+localId+" which is science metadata "+isScienceMetadata+" exist in the Metacast file system? The answer is "+exist);
-        return exist;   
+        logMetacat.debug("IdentifierManager.ObjectFileExist - Does the object file for the local id "
+                          + localId + " which is science metadata " + isScienceMetadata
+                          + " exist in the Metacast file system? The answer is " + exist);
+        return exist;
     }
-    
+
     /**
      *Get the the file path for the given object local id
      * @param localId
@@ -2128,11 +1898,13 @@ public class IdentifierManager {
                 documentDir = PropertyService.getProperty("application.datafilepath");
             }
             documentPath = documentDir + FileUtil.getFS() + localId;
-        } 
-        logMetacat.debug("IdentifierManager.getObjectFilePath - the file path for the object with localId "+localId+" which is scienceMetacat "+isScienceMetadata+", is "+documentPath+". If the value is null, this means we can't find it.");
-        return documentPath;   
+        }
+        logMetacat.debug("IdentifierManager.getObjectFilePath - the file path for the object with localId "
+                        + localId + " which is scienceMetacat " + isScienceMetadata + ", is "
+                        + documentPath + ". If the value is null, this means we can't find it.");
+        return documentPath;
     }
-    
+
     /**
      * IF the given localId exists on the xml_revisions table
      * @param localId
@@ -2152,7 +1924,8 @@ public class IdentifierManager {
             serialNumber = conn.getCheckOutSerialNumber();
             // Check if the document exists in xml_revisions table.
             //this only archives a document from xml_documents to xml_revisions (also archive the xml_nodes table as well)
-            logMetacat.debug("IdentifierManager.existsInXmlLRevisionTable - check if the document "+docid+"."+rev+ " exists in the xml_revision table");
+            logMetacat.debug("IdentifierManager.existsInXmlLRevisionTable - check if the document "
+                              + docid + "." + rev + " exists in the xml_revision table");
             pstmt = conn.prepareStatement("SELECT rev, docid FROM xml_revisions WHERE docid = ? AND rev = ?");
             pstmt.setString(1, docid);
             pstmt.setInt(2, rev);
@@ -2175,10 +1948,11 @@ public class IdentifierManager {
                 pstmt.close();
             }
         }
-        logMetacat.info("IdentifierManager.existsInXmlLRevisionTable - Does the docid "+docid+"."+rev+ " exist in the xml_revision table? - "+exist);
+        logMetacat.info("IdentifierManager.existsInXmlLRevisionTable - Does the docid " + docid
+                        + "." + rev + " exist in the xml_revision table? - " + exist);
         return exist;
     }
-    
+
     /**
      * Determine if the given pid exists on the identifier table.
      * @param pid must be a PID
@@ -2198,7 +1972,8 @@ public class IdentifierManager {
                 serialNumber = conn.getCheckOutSerialNumber();
                 // Check if the document exists in xml_revisions table.
                 //this only archives a document from xml_documents to xml_revisions (also archive the xml_nodes table as well)
-                logMetacat.debug("IdentifierManager.existsInIdentifierTable - check if the document "+ pid.getValue() +" exists in the identifier table");
+                logMetacat.debug("IdentifierManager.existsInIdentifierTable - check if the document "
+                                  + pid.getValue() + " exists in the identifier table");
                 pstmt = conn.prepareStatement("SELECT guid FROM identifier WHERE guid = ?");
                 pstmt.setString(1, pid.getValue());
                 logMetacat.debug("IdentifierManager.existsInXmlLRevisionTable - executing SQL: " + pstmt.toString());
@@ -2209,7 +1984,7 @@ public class IdentifierManager {
                 }
                 conn.increaseUsageCount(1);
             }
-            
+
         } catch (Exception e) {
             throw new SQLException(e.getMessage());
         } finally {
@@ -2222,12 +1997,13 @@ public class IdentifierManager {
                 pstmt.close();
             }
         }
-        logMetacat.info("IdentifierManager.existsInIdentifierTable - Does the guid "+pid.getValue()+ " exist in the xml_revision table? - "+exists);
+        logMetacat.info("IdentifierManager.existsInIdentifierTable - Does the guid "
+                     + pid.getValue() + " exist in the xml_revision table? - " + exists);
         return exists;
     }
-    
+
     /**
-     * Get the list of guids whose modification dates are in the range of 
+     * Get the list of guids whose modification dates are in the range of
      * the given start and end times.
      * @param start  the start time of the range
      * @param end  the end time of the range
@@ -2248,7 +2024,7 @@ public class IdentifierManager {
                 sql = sql + " where date_modified >= ?";
                 hasStart = true;
             }
-            
+
             if (end != null) {
                 hasEnd = true;
                 if (!hasStart) {
@@ -2271,10 +2047,10 @@ public class IdentifierManager {
             while (rs.next()) {
                 String guid = rs.getString(1);
                 guids.add(guid);
-            } 
+            }
             stmt.close();
         } catch (SQLException e) {
-            logMetacat.error("Error while retrieving the guid: " 
+            logMetacat.error("Error while retrieving the guid: "
                     + e.getMessage());
         } finally {
             // Return database connection to the pool
